[package]
name = "dolphin"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-client = { version = "0.1.0", path = "./mqtt-client" }
chrono = "0.4.31"
diesel = { version = "2.1.4", features = ["chrono", "mysql"] }
rand = "0.8.5"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
hmac = "0.12.1"
sha2 = { version = "0.10.8", features = ["std", "asm-aarch64"] }
base64 = "0.21.7"
url = "2.5.0"
reqwest = { version = "0.11.23", features = ["json", "multipart"] }
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
bizppurio = { version = "1.0.0", path = "../bizppurio-rs" }


firestore = "0.41.0"
uuid = {version = "1.8.0", features = ["v4"]}
prost-types = "0.11" 
google-firestore1 = "1.0.14"

